# google_speech_rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: docs.yaml  rust.yaml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/ghost/: attr.phantom.html  index.html
docs/google_speech/: all.html  index.html  sidebar-items.js
docs/indoc/: all.html  index.html  macro.concatdoc.html  macro.eprintdoc.html  macro.formatdoc.html  macro.indoc.html  macro.printdoc.html  macro.writedoc.html
docs/indoc_impl/: all.html  index.html  macro.proc_macro_hack_indoc.html
docs/inventory/: index.html  macro.collect.html  macro.submit.html  trait.Collect.html  type.iter.html
docs/inventory_impl/: index.html
docs/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MICRO.html  (+4770 more)
src/: lib.rs  tts.rs
tests/: tests.rs
(+4453 files in other folders)
